# typingtest

./: .gitignore  LICENSE  README.md  pyproject.toml
typingtest/: __main__.py  config.py  screen.py
typingtest/gui/: __init__.py  choicer.py  cursor.py  other.py  text.py  timer.py
typingtest/resources/: __init__.py  russian.txt  statistics.py
typingtest/resources/words/: easy.txt  normal.txt
typingtest/scenes/: __init__.py  base.py  choice_complexity.py  end.py  start.py  type_text.py
